--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>画像内の球カウンター</title>
+	<title>Counter</title>
 	<style>
 		body { font-family: sans-serif; text-align: center; }
-		#counter { font-size: 2em; margin: 1em; }
+		#counter { font-size: 1em; margin: 1em; }
 		#canvasWrapper { display: inline-block; position: relative; }
-		canvas { border: 1px solid #888; cursor: crosshair; }
+		canvas {
+			border: 1px solid #888;
+			cursor: crosshair;
+			width: 100vw;
+			max-width: 100%;
+			height: auto;
+			display: block;
+		}
 		#controls { margin-bottom: 1em; }
 		#undoBtn { margin-left: 1em; }
 	</style>
@@ -19,7 +26,7 @@
 		<input type="file" id="imgInput" accept="image/*">
 		<button id="undoBtn">戻る</button>
 	</div>
-	<div id="counter">球の数: <span id="count">0</span></div>
+	<div id="counter">数: <span id="count">0</span></div>
 	<div id="canvasWrapper">
 		<canvas id="imgCanvas"></canvas>
 	</div>
@@ -29,8 +36,17 @@
 	const ctx = canvas.getContext('2d');
 	const countSpan = document.getElementById('count');
 	const undoBtn = document.getElementById('undoBtn');
-	let img = new window.Image();
-	let markers = [];
+	let img = new window.Image(); 
+	let markers = []; 
+	let imgNatural = { width: 0, height: 0 }; 
+
+	function resizeCanvasToWindow() {
+		if (!imgNatural.width) return;
+		const winW = window.innerWidth;
+		const scale = winW / imgNatural.width;
+		canvas.width = winW;
+		canvas.height = imgNatural.height * scale;
+	}
 
 	imgInput.addEventListener('change', e => {
 		const file = e.target.files[0];
@@ -38,8 +54,9 @@
 		const reader = new FileReader();
 		reader.onload = function(ev) {
 			img.onload = function() {
-				canvas.width = img.width;
-				canvas.height = img.height;
+				imgNatural.width = img.width;
+				imgNatural.height = img.height;
+				resizeCanvasToWindow();
 				drawAll();
 			};
 			img.src = ev.target.result;
@@ -50,24 +67,25 @@
 	});
 
 	function drawAll() {
-		ctx.clearRect(0, 0, canvas.width, canvas.height);
-		ctx.drawImage(img, 0, 0);
-		for (const m of markers) {
-			drawMarker(m.x, m.y);
-		}
+		ctx.clearRect(0, 0, canvas.width, canvas.height); 
+		if (!imgNatural.width) return; 
+		ctx.drawImage(img, 0, 0, canvas.width, canvas.height); 
+		for (const m of markers) { 
+			drawMarker(m.x, m.y); 
+		} 
 	}
 
 	function drawMarker(x, y) {
-	ctx.beginPath();
-	ctx.arc(x, y, 5, 0, 2 * Math.PI); // 半径を12→8に変更
-	ctx.fillStyle = 'rgba(255,0,0,0.8)';
-	ctx.fill();
-	ctx.strokeStyle = '#fff';
-	ctx.lineWidth = 2;
-	ctx.stroke();
+		ctx.beginPath(); 
+		ctx.arc(x, y, 8, 0, 2 * Math.PI); 
+		ctx.fillStyle = 'rgba(255,0,0,0.8)'; 
+		ctx.fill(); 
+		ctx.strokeStyle = '#fff'; 
+		ctx.lineWidth = 2; 
+		ctx.stroke(); 
 	}
 
-	canvas.addEventListener('click', e => {
+	canvas.addEventListener('pointerdown', e => {
 		if (!img.src) return;
 		const rect = canvas.getBoundingClientRect();
 		const x = (e.clientX - rect.left) * (canvas.width / rect.width);
@@ -81,13 +99,20 @@
 		countSpan.textContent = markers.length;
 	}
 
-	undoBtn.addEventListener('click', () => {
-		if (markers.length > 0) {
-			markers.pop();
-			drawAll();
-			updateCount();
-		}
-	});
+	undoBtn.addEventListener('pointerdown', () => { 
+		if (markers.length > 0) { 
+			markers.pop(); 
+			drawAll(); 
+			updateCount(); 
+		} 
+	}); 
+
+	// ウィンドウリサイズ時もcanvasを横幅100%で再調整 
+	window.addEventListener('resize', () => { 
+		if (!imgNatural.width) return; 
+		resizeCanvasToWindow(); 
+		drawAll(); 
+	}); 
 	</script>
 </body>
 </html>
