--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>HTML Only Counter</title>
+<title>colony counter</title>
 <style>
   body {
     font-family: sans-serif;
@@ -11,9 +11,12 @@
   }
   #controls {
     margin-bottom: 1em;
+	display: flex;
+	align-items: center;
+	justify-content:	center ;
+	gap: 10px;
   }
   #counter {
-    margin-bottom: 1em;
     font-size: 1.2em;
   }
   #imageWrapper {
@@ -29,8 +32,8 @@
   }
   .marker {
     position: absolute;
-    width: 16px;
-    height: 16px;
+    width: 10px;
+    height: 10px;
     border-radius: 50%;
     background: rgba(255, 0, 0, 0.8);
     border: 2px solid #fff;
@@ -46,11 +49,12 @@
 <body>
   <div id="controls">
     <input type="file" id="imgInput" accept="image/*">
-    <button id="undoBtn">戻る</button>
+	数:
+	<div id="counter"><span id="count">0</span></div>
+	大きさ:
+	<input type="range" name="size" id="sizeInput" value="10" min="2" max="18">
+	<button id="undoBtn">戻る</button>
   </div>
-
-  <div id="counter">数: <span id="count">0</span></div>
-
   <div id="imageWrapper">
     <img id="mainImg" src="" alt="">
   </div>
@@ -61,10 +65,12 @@ const mainImg = document.getElementById('mainImg');
 const wrapper = document.getElementById('imageWrapper');
 const countSpan = document.getElementById('count');
 const undoBtn = document.getElementById('undoBtn');
+const sizeInput = document.getElementById('sizeInput');
 
 let markers = [];
 let startPos = null;
 let moved = false;
+let tempMarker = null;
 
 // 画像選択
 imgInput.addEventListener('change', e => {
@@ -88,11 +94,30 @@ function updateCount() {
   countSpan.textContent = markers.length;
 }
 
-// === タップ検出 ===
+// === マーカー描画関数 ===
+function createMarker(xPercent, yPercent) {
+  const marker = document.createElement('div');
+  marker.className = 'marker';
+  marker.style.width = sizeInput.value + 'px';
+  marker.style.height = sizeInput.value + 'px';
+  marker.style.left = `${xPercent}%`;
+  marker.style.top = `${yPercent}%`;
+  wrapper.appendChild(marker);
+  return marker;
+}
+
+// === ポインタ操作 ===
 wrapper.addEventListener('pointerdown', e => {
   if (!mainImg.src) return;
   if (e.pointerType === 'mouse' && e.button !== 0) return; // 右クリック除外
   if (!e.isPrimary) return; // 複数指操作除外
+
+  const rect = mainImg.getBoundingClientRect();
+  const xPercent = ((e.clientX - rect.left) / rect.width) * 100;
+  const yPercent = ((e.clientY - rect.top) / rect.height) * 100;
+
+  // 押した瞬間にマーカー作成
+  tempMarker = createMarker(xPercent, yPercent);
   startPos = { x: e.clientX, y: e.clientY };
   moved = false;
 });
@@ -102,27 +127,41 @@ wrapper.addEventListener('pointermove', e => {
   const dx = e.clientX - startPos.x;
   const dy = e.clientY - startPos.y;
   if (Math.sqrt(dx*dx + dy*dy) > 10) {
-    moved = true; // スクロール・ドラッグ扱い
+    moved = true;
+    // スクロールなどと判定されたらマーカー削除（キャンセル）
+    if (tempMarker) {
+      tempMarker.remove();
+      tempMarker = null;
+    }
   }
 });
 
 wrapper.addEventListener('pointerup', e => {
-  if (!mainImg.src || moved || !startPos) return;
+  if (!mainImg.src || !startPos) return;
   e.preventDefault();
 
-  const rect = mainImg.getBoundingClientRect();
-  const xPercent = ((e.clientX - rect.left) / rect.width) * 100;
-  const yPercent = ((e.clientY - rect.top) / rect.height) * 100;
-
-  const marker = document.createElement('div');
-  marker.className = 'marker';
-  marker.style.left = `${xPercent}%`;
-  marker.style.top = `${yPercent}%`;
-  wrapper.appendChild(marker);
-
-  markers.push({ x: xPercent, y: yPercent });
-  updateCount();
+  if (!moved && tempMarker) {
+    // 有効なクリックと判定
+    const rect = mainImg.getBoundingClientRect();
+    const xPercent = ((e.clientX - rect.left) / rect.width) * 100;
+    const yPercent = ((e.clientY - rect.top) / rect.height) * 100;
+    markers.push({ x: xPercent, y: yPercent });
+    updateCount();
+    tempMarker = null;
+  } else if (moved && tempMarker) {
+    // 移動していた場合はマーカー削除
+    tempMarker.remove();
+    tempMarker = null;
+  }
   startPos = null;
+});
+
+// サイズ変更時に既存マーカー更新
+sizeInput.addEventListener('input', e => {
+  document.querySelectorAll('.marker').forEach(el => {
+    el.style.width = sizeInput.value + 'px';
+    el.style.height = sizeInput.value + 'px';
+  });
 });
 
 // 戻るボタン
@@ -132,7 +171,7 @@ undoBtn.addEventListener('click', () => {
   const lastMarker = wrapper.querySelector('.marker:last-of-type');
   if (lastMarker) lastMarker.remove();
   updateCount();
-});
+})
 </script>
 </body>
 </html>
