--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     }
 
     #controls {
-      margin-bottom: 1em;
+      margin: 1em;
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 10px;
+      gap: 7px;
     }
 
     #counter {
@@ -47,13 +47,13 @@
       height: 10px;
       border-radius: 50%;
       background: rgba(255, 0, 0, 0.8);
-      outline: 0.8px solid #fff;
+      outline: 1px solid #fff;
       transform: translate(-50%, -50%);
       pointer-events: none;
     }
 
     .marker.temp {
-      opacity: 1;
+      opacity: 0.6;
       filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.6));
     }
 
@@ -69,8 +69,9 @@
   <div id="controls">
     <input type="file" id="imgInput" accept="image/*">
     数: <div id="counter"><span id="count">0</span></div>
-    大きさ: <input type="range" name="size" id="sizeInput" value="4" min="0.5" max="10">
+    大きさ: <input type="range" name="size" id="sizeInput" value="6" min="0.8" max="20">
     <button id="undoBtn">戻る</button>
+    <button id="resetBtn">リセット</button>
   </div>
 
   <div id="imageWrapper">
@@ -84,6 +85,7 @@
     const countSpan = document.getElementById('count');
     const undoBtn = document.getElementById('undoBtn');
     const sizeInput = document.getElementById('sizeInput');
+    const resetBtn = document.getElementById('resetBtn');
 
     let markers = []; // {x: percent, y: percent}
     let startPos = null;
@@ -273,6 +275,13 @@
       // DOM上の最後のマーカーを削除
       const lastMarker = wrapper.querySelector('.marker:last-of-type');
       if (lastMarker) lastMarker.remove();
+      updateCount();
+    });
+
+    resetBtn.addEventListener('click', () => {
+      if (markers.length === 0) return;
+      markers = [];
+      clearMarkers();
       updateCount();
     });
 
